<resources>
    <string name="app_name">AlerTime</string>
    <string name="do_login">INICIAR SESIÓN</string>
    <string name="do_apply">APLICAR</string>
    <string name="do_clean">LIMPIAR</string>
    <string name="do_delete">ELIMINAR</string>
    <string name="do_login_min">Iniciar Sesión</string>
    <string name="do_register">REGISTRARSE</string>
    <string name="do_create_account">CREAR CUENTA</string>
    <string name="do_register_min">Registrase</string>
    <string name="do_register_success">¡Juan Sebastían tu cuenta se ha creado exitosamente!</string>
    <string name="do_cancel">CANCELAR</string>
    <string name="label_names">Nombres</string>
    <string name="label_lastnames">Apellidos</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_confirm_password">Confirmar contraseña</string>
    <string name="label_rememberme">Recordarme</string>
    <string name="label_search_by_name">Buscar por nombre</string>
</resources>